--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ast viewer",
   "main": "index.js",
   "scripts": {
-    "start": "start.sh",
+    "start": "node index.js ./example/1.js > a.html && open a.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
