--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ast viewer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js ./example/1.js > a.html && open a.html",
+    "start": "node index.js ./example/1.js> a.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "d3": "~3.4.0",
     "browserify": "~3.19.1",
     "vash": "~0.7.6-3",
-    "concat-stream": "~1.4.1"
+    "concat-stream": "~1.4.1",
+    "escodegen": "~1.0.1"
   }
 }
